// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeStuffSeparator renders correctly 1`] = `
<Divider
  text="trade details"
  type="light"
/>
`;

exports[`TradeStuffSeparator renders correctly when the dispute is active 1`] = `
<Divider
  text="trade details"
  type="error"
/>
`;
